--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "isomorphic-fetch": "^3.0.0",
     "knex": "^2.4.2",
     "node-fetch": "^3.3.1",
     "nodemon": "^2.0.22",
